--- a/.renovaterc.json5
+++ b/.renovaterc.json5
@@ -13,9 +13,8 @@
       "customType": "regex",
       "extractVersionTemplate": "^v?(?<version>.*)$",
       "fileMatch": [
-        "^\\.github/workflows/.*\\.ya?ml$",
-        "^\\.trunk/trunk.yaml",
-        "^\\.tool-versions$"
+        "\\.ya?ml$",
+        "^\\.tool-versions$",
       ],
       "matchStrings": [
         "(\\s+|.*?@)(?<currentValue>\\S+)\\s*#\\s*datasource=(?<datasource>\\S+)\\s+depName=(?<depName>\\S+)(\\s+versioning=(?<versioning>\\S+))?(\\s+registryUrl=(?<registryUrl>\\S+))?\\s*\\n"
